--- a/css/aside.css
+++ b/css/aside.css
@@ -200,6 +200,14 @@ div-newspaper {
 }
 /* for 4 row sticky menu */
 
+.pad200  {
+	   padding: 160px 10px 0px 0px;
+   	text-align: right;
+	font-size: 1.5em;
+	font-weight: 800;
+}
+/* for 4+ row sticky menu */
+
 
 div-sticky {
   position: sticky;	
